 + New global: InitHealth: Initial hog health value from game scheme (read-only)
 + Animate library: AnimOutOfNowhere: destX and destY are now optional (default: current position)
 * Fix SetClanColor causing crashes and severe rendering bugs
 * Fix SetAmmoDelay not working properly when called after onGameStart
 * Fix DismissTeam not clearing team properly

====================== 0.9.25 ======================
HIGHLIGHTS:
 + Complete overhaul of Continental supplies
 + Can adjust weapon start and crate probabilities in Balanced Random Weapon
 + Remove rubber duck
 + New air mine features
 + Rework team rankings
 + Tied teams now rank equally
 + Help button in main menu
 + 19 new hedgehog taunts
 + Many new Lua API features
 * Functionality of controllers restored
 * Fix at least 2 crashes
 * Fixed some awkward network bugs which caused games to come to a standstill
 * Many bugs related to the wrap world edge fixed (but not all)
 * Sudden Death always came exactly 1 turn later than planned

Game, gameplay:
 + Increase hedgehog limit to 64
 + Remove rubber duck
 + Shotgun, Desert Eagle, Sniper Rifle, Firepunch, Kamikaze, Whip and Baseball Bat can now hit air mines (and some other projectiles)
 + Freezer can freeze air mines when they don't move too fast
 + Air mines get stunned by getting shoved
 + Shotgun shots can now pass through portals
 * Fix hog being unable to walk after using sniper rifle without firing both shots
 * Fix sine gun dealing damage to attacker if shooting up
 * Hedgehog was able to drop more than 2 sticky mines if dropping first one from utility, then stop using utility
 * Fix Sudden Death starting in the second turn of a round rather than the first
 * Fix hammer and pickhammer not digging correctly at wrap world edge
 * Fix drill rocket exploding when digging at bounce/wrap world edge
 * Fix freezer ray not working through wrap world edge
 * Fix freezer ray going through bounce world edge